sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: illegal start of simple expression
	while () {
               ^AlgBubbleSort1:17: error: ')' expected but '}' found.
}
^